# spotify-timeline

./: .env  .env.production  README.md  eslint.config.mjs  next.config.js  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
.github/workflows/: main.yml
src-tauri/: .gitignore  Cargo.toml  spotify_config_example.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: de_chrono.rs  de_spotify.rs  error.rs  filter_sort.rs  main.rs  serde_chrono.rs  serde_spotify.rs  spotify_history_file.rs
src/app/: globals.css  greet.tsx  layout.tsx  not-found.tsx  page.tsx  providers.tsx
src/app/advanced/: page.tsx
src/app/calendar/: page.tsx
src/app/components/: greet.tsx  navbar.tsx
src/app/random/: page.tsx
src/app/timeline/: page.tsx
src/components/: chevron-down.tsx  file-picker.tsx  filter-state-provider.tsx  filters.tsx  folder.tsx  navbar.tsx  spotify-api-provider.tsx  spotify-file-provider.tsx  spotify-link.tsx  table-info-card.tsx  table-song-card.tsx  theme-switcher.tsx  timeline-block.tsx
src/components/icons/: chevron-down.tsx  search.tsx
src/hooks/: filters-hook.tsx  spotify-api-hook.tsx  spotify-file-hook.tsx
src/utils/: spotify-history-file.ts  spotify-history-file.tsx  time.ts
