[package]
name = "spotify-timeline"
version = "0.1.0"
description = "Tool to visiually explore Spotify's extended listening history files"
authors = ["Maxim Tyuterev"]
license = "MIT"
repository = "https://github.com/maxty99/spotify-timeline"
default-run = "spotify-timeline"
edition = "2021"
rust-version = "1.60"

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
strip = true
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [
    "shell-open",
    "fs-exists",
    "dialog-open",
    "fs-read-file",
    "fs-read-dir",
] }
chrono = { version = "0.4.26", features = ["serde"] }
thiserror = "1.0.44"
toml = "0.7.6"
rand = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
