[package]
name = "spotify-timeline"
version = "0.1.1"
description = "Tool to visiually explore Spotify's extended listening history files"
authors = ["Maxim Tyuterev"]
license = "MIT"
repository = "https://github.com/maxty99/spotify-timeline"
default-run = "spotify-timeline"
edition = "2024"
rust-version = "1.85"

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
strip = true
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.7.0", features = [] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "2.0.0"
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0.12"
toml = "0.9.2"
rand = "0.9.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
